<resources>
    <string name="app_name">MyFoodCriticApp</string>
    <string name="Fragment_title">YourLocalFoodCritic</string>
    <string name="start_button">Get started!</string>
    <string name="restaurant_Lbl">Restaurant:</string>
    <string name="restaurant_name">Enter Restaurant Name</string>
    <string name="Address_Lbl">Restaurant address:</string>
    <string name="address_Textbox">Enter Restaurant Address:</string>
    <string name="Phone_Lbl">Restaurant  Phone Number:</string>
    <string name="phoneNum_Box">Enter phone number:</string>
    <string name="continue_Btn">Continue</string>
    <string name="food_Lbl">Food:</string>
    <string name="food_Name">Enter Food Name:</string>
    <string name="price_Lbl">Price:</string>
    <string name="price_TextBox">Enter Price Of Food:</string>
    <string name="descriptionLbl">Food Description:</string>
    <string name="descriptionTextbox">Enter Description Of Food</string>
    <string name="restaurantInstruction">Enter Restaurant Details:</string>
    <string name="addResturant_Btn">Add Restaurant</string>
    <string name="addFootItemBtn">Add FoodItem</string>
    <string name="enterReviewText">Enter Review Details:</string>
    <string name="ratingTextView">Rating:</string>
    <string name="reviewLbl">Review Food:</string>
    <string name="reviewBtn">Add Review</string>
    <string name="enterReviewTextbox">Enter Review of Food</string>
    <string name="viewRestaurantBtn">View Restaurants</string>
    <string name="backBtn">Back</string>
    <string name="title_activity_view_restaurant">ViewRestaurantActivity</string>
    <string name="editText">Edit</string>
    <string name="deleteText">Delete</string>
    <string name="updateBtnName">Update Restaurant</string>
    <string name="viewFoodItems">View FoodItems</string>
</resources>