<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRestaurantActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="0dp"
        android:layout_height="62dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.fragment.app.FragmentContainerView>

    <TextView
        android:id="@+id/restaurantNameViewText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container_view" />

    <TextView
        android:id="@+id/restaurantAddressViewText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/restaurantNameViewText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/restaurantNameViewText"
        app:layout_constraintTop_toBottomOf="@+id/restaurantNameViewText" />

    <TextView
        android:id="@+id/restaurantPhoneViewText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/restaurantAddressViewText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/restaurantAddressViewText"
        app:layout_constraintTop_toBottomOf="@+id/restaurantAddressViewText" />

    <Button
        android:id="@+id/deleteRestaurantView"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/deleteText"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/restaurantPhoneViewText"
        app:layout_constraintTop_toBottomOf="@+id/restaurantPhoneViewText" />

    <Button
        android:id="@+id/editRestaurantViewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/editText"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintStart_toStartOf="@+id/restaurantPhoneViewText"
        app:layout_constraintTop_toBottomOf="@+id/restaurantPhoneViewText" />

    <Button
        android:id="@+id/nxtFoodBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/addFootItemBtn"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="@+id/deleteRestaurantView"
        app:layout_constraintTop_toBottomOf="@+id/deleteRestaurantView" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/backBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_container_view" />
</androidx.constraintlayout.widget.ConstraintLayout>